# NHS3152_SWITCH

./: Readme.md  build.bat  build.ps1  build.sh  meson.build  meson_options.txt
config/: cross_linux.txt  cross_windows.txt
src/: app_demo_dp_blinky_Debug.ld  custom.ld  meson.build
src/application/: adxl343.c  adxl343.h  board.c  board.h  crp.c  lsm6dsm.c  lsm6dsm.h  main.c  meson.build
src/drivers/: meson.build
src/drivers/include/: app_demo_dp_blinky_Debug.ld  app_demo_dp_blinky_Debug_library.ld  app_demo_dp_blinky_Debug_memory.ld
src/drivers/nss/app_demo_dp_blinky/: .cproject
src/drivers/nss/mods/led/: led_dft.h
src/drivers/nss/mods/startup/: startup.c
src/drivers/rtt/: SEGGER_RTT.c
