project_inc = [
  include_directories('application'),
  # include_directories('drivers/nss/lib_board_dp/inc'),
  include_directories('drivers/nss/lib_chip_nss/inc'),
  include_directories('drivers/nss/mods'),
  include_directories('drivers/include'),
  include_directories('drivers/include/NXP'),
  include_directories('drivers/rtt'),
  # include_directories('drivers/nss/lib_board_dp/mods'),
]

subdir('application') 
subdir('drivers') 

project_src += application_src
project_src += drivers_src